# ETL_ML_Process

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml
dags/: etl_dag.py
lib/: dto.py
lib/clients/: client.py
lib/constants/: queries.py
lib/models/: model.py
lib/processors/: processor.py
lib/utils/: config.py  input_to_db.py
lib/workers/: worker.py
