[project]
name = "etl-process"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.2",
    "datasets>=4.1.1",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
